--- a/SaveTheHumans/SaveTheHumans/MainPage.xaml
+++ b/SaveTheHumans/SaveTheHumans/MainPage.xaml
@@ -39,7 +39,7 @@
         </Grid.RowDefinitions>
 
         <!-- Back button and page title -->
-        <Grid Grid.ColumnSpan="3">
+        <Grid x:Name="grid" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -56,19 +56,19 @@
         </StackPanel>
 
         <ProgressBar x:Name="progressBar" Grid.Column="1" Grid.Row="2" Height="20"/>
-        <Canvas x:Name="playArea" Grid.Column="1" Grid.Row="1">
+        <Canvas x:Name="playArea" Grid.Column="1" Grid.Row="1" PointerExited="playArea_PointerExited" PointerMoved="playArea_PointerMoved">
             <Canvas.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black"/>
                     <GradientStop Color="#FF6E2929" Offset="1"/>
                 </LinearGradientBrush>
             </Canvas.Background>
-            <StackPanel x:Name="human" Orientation="Vertical">
+            <StackPanel x:Name="human" Orientation="Vertical" PointerPressed="human_PointerPressed">
                 <Ellipse Fill="White" Height="10" Width="10" Stroke="Black"/>
                 <Rectangle Fill="White" Height="25" Width="10" Stroke="Black"/>
             </StackPanel>
             <TextBox x:Name="gameOverText" Canvas.Left="229" TextWrapping="Wrap" Text="Game Over" FontFamily="Arial Black" FontSize="100" Width="551" Canvas.Top="154" FontWeight="Bold" FontStyle="Italic" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White"/>
-            <Rectangle x:Name="target" Height="50" Canvas.Left="808" Stroke="Black" Canvas.Top="96" Width="50" RenderTransformOrigin="0.5,0.5">
+            <Rectangle x:Name="target" Height="50" Canvas.Left="808" Stroke="Black" Canvas.Top="96" Width="50" RenderTransformOrigin="0.5,0.5" PointerEntered="target_PointerEntered">
                 <Rectangle.RenderTransform>
                     <CompositeTransform Rotation="45"/>
                 </Rectangle.RenderTransform>
